tests/ui/cached_with_cached_flag_no_return.rs
use cached::macros::cached;

#[cached(with_cached_flag = true)]
fn my_fn(k: i32) {
    let _ = k;
}

fn main() {}
